# web-client

./: README.md  index.html  map.html  nbt.js  package-lock.json  package.json  pnpm-lock.yaml  schematic.js  sw.js  vite.config.js
dda_voxelize_wasm/: Cargo.toml
dda_voxelize_wasm/pkg/: dda_voxelize_wasm.d.ts  dda_voxelize_wasm.js  dda_voxelize_wasm_bg.wasm  dda_voxelize_wasm_bg.wasm.d.ts  package.json
dda_voxelize_wasm/src/: lib.rs
public/1.20/assets/minecraft/blockstates/: andesite_wall.json  blackstone_wall.json  brick_wall.json  cobbled_deepslate_wall.json  cobblestone_wall.json  deepslate_brick_wall.json  deepslate_tile_wall.json  diorite_wall.json  end_stone_brick_wall.json  granite_wall.json  mossy_cobblestone_wall.json  mossy_stone_brick_wall.json  mud_brick_wall.json  nether_brick_wall.json  pink_petals.json  polished_blackstone_brick_wall.json  polished_blackstone_wall.json  polished_deepslate_wall.json  prismarine_wall.json  red_nether_brick_wall.json  red_sandstone_wall.json  redstone_wire.json  sandstone_wall.json  stone_brick_wall.json
public/1.20/assets/minecraft/models/block/: black_bed.json  black_shulker_box.json  blue_bed.json  blue_shulker_box.json  brown_bed.json  brown_shulker_box.json  chest.json  conduit.json  (+27 more)
public/icons/: site.webmanifest
scripts/: benchmark-performance.mjs  build-wasm.mjs
src/: SingleSceneFetcher.js  SingleSceneViewer.js  UI.js  Viewer.js  assignToBlocksForGLB.js  config.js  exportToSchematic.js  index.js  loadGltfBatch.js  map.js  nbt.js  voxelize-model.js  voxelizer.js  voxelizer.worker.js  webgpu-benchmark.js
